# j-space-exp-1

./: .gitignore  CONTRIBUTING.md  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: tests.yml
artifacts/qwen2.5-0.5b-instruct-demo/: metadata.json
docs/: DESIGN.md  LIMITATIONS.md  METHODOLOGY.md  PROGRESS.md  VLM_SUPPORT.md
examples/: README.md  RESULTS.md  eval_examples.jsonl  sample_prompts.jsonl  text_demo.py  vlm_demo.py
examples/reports/text_qwen2.5_0.5b/: arithmetic-intermediate.html  boot-country-currency.html  capital-france.html  code-bug.html  multi-hop-author.html  opposite-hot.html  sky-color.html  spider-legs.html
examples/reports/vlm_smolvlm_synthetic/: report.html
src/openjspace/: __init__.py  cli.py  config.py  logging_utils.py  types.py
src/openjspace/analysis/: comparisons.py  decompose_runner.py  modality_map.py  rankings.py
src/openjspace/core/: applying.py  decomposition.py  fitting.py  hooks.py  lens.py  normalization.py  serialization.py
src/openjspace/data/: datasets.py  prompt_loading.py
src/openjspace/models/: hf_decoder.py  protocol.py  qwen_decoder.py  registry.py  smolvlm.py  tiny.py
src/openjspace/report/: html_export.py  schema.py
src/openjspace/report/templates/: report.html
src/openjspace/server/: app.py  jobs.py  schemas.py
tests/: test_api.py  test_decomposition.py  test_fitting.py  test_integration_qwen.py  test_integration_smolvlm.py  test_lens.py  test_model_protocol.py  test_serialization.py  test_vlm_mapping.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  api.ts  styles.css  types.ts
web/src/components/: ConceptExplorer.tsx  ImageTokens.tsx  LensComparison.tsx  LensGrid.tsx  MetadataTab.tsx  RankTracking.tsx  Sidebar.tsx
