[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openjspace"
version = "0.1.0"
description = "Interactive Jacobian-lens and J-space visualizer for open-weight language models and VLMs"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "The OpenJSpace Authors" }]
keywords = ["interpretability", "jacobian-lens", "logit-lens", "transformers"]
dependencies = [
    "torch>=2.2",
    "transformers>=4.50",
    "safetensors>=0.4",
    "huggingface_hub>=0.23",
    "numpy>=1.26",
    "pydantic>=2.6",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
datasets = ["datasets>=2.19"]

[project.scripts]
openjspace = "openjspace.cli:app"

[project.urls]
Repository = "https://github.com/kh-openjspace/openjspace"
Upstream = "https://github.com/anthropics/jacobian-lens"
Paper = "https://transformer-circuits.pub/2026/workspace/index.html"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openjspace = ["report/templates/*", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["RUF012"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["openjspace"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that download real model weights (deselect with '-m \"not integration\"')",
    "slow: integration tests that take several minutes on CPU",
]
addopts = "-m 'not integration'"
filterwarnings = ["ignore::DeprecationWarning"]
